# Chatbot

./: .env.template  .gitignore  README.md  README_data_loading.md  load_data.py  main.py  pyproject.toml  start_server.py  test_client.py
legal_consult_agent/: agent.py
legal_consult_agent/nodes/: __init__.py  critic.py  generator.py  reranker.py  retriever.py  semantic_router.py
legal_consult_agent/utils/: __init__.py  data_loader.py  embeddings.py  models.py  state.py  tools.py
vectorDB/: chroma.sqlite3
vectorDB/data/: criminal.json  criminal.json.hash  marriage.json  marriage.json.hash  money_debt.json  money_debt.json.hash
